--- a/package.json
+++ b/package.json
@@ -34,20 +34,25 @@
     "dependencies": {
         "ejs": "^3.1.10",
         "express": "^4.21.1",
+        "jquery": "^3.7.1",
         "mysql2": "^3.11.5"
     },
     "devDependencies": {
         "@eslint/js": "^9.16.0",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/express": "^5.0.0",
+        "@types/jquery": "^3.5.32",
         "@types/node": "^22.10.1",
         "autoprefixer": "^10.4.20",
+        "chart.js": "^4.4.7",
         "concurrently": "^9.1.0",
         "cpy-cli": "^5.0.0",
         "cross-env": "^7.0.3",
         "eslint": "^9.16.0",
+        "eslint-config-jquery": "^3.0.2",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
+        "globals": "^15.13.0",
         "husky": "^9.1.7",
         "lint-staged": "^15.2.10",
         "nodemon": "^3.1.7",
