--- a/package.json
+++ b/package.json
@@ -32,15 +32,19 @@
         ]
     },
     "dependencies": {
+        "axios": "^1.7.9",
+        "bcrypt": "^5.1.1",
+        "dotenv": "^16.4.7",
         "ejs": "^3.1.10",
-        "express": "^4.21.1",
+        "express": "^5.0.0",
         "jquery": "^3.7.1",
         "mysql2": "^3.11.5"
     },
     "devDependencies": {
         "@eslint/js": "^9.16.0",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-        "@types/express": "^5.0.0",
+        "@types/bcrypt": "^5.0.2",
+        "@types/express": "^4.0.0",
         "@types/jquery": "^3.5.32",
         "@types/node": "^22.10.1",
         "autoprefixer": "^10.4.20",
