--- a/package.json
+++ b/package.json
@@ -34,18 +34,24 @@
     "dependencies": {
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
+        "cookie-session": "^2.1.0",
         "dotenv": "^16.4.7",
         "ejs": "^3.1.10",
         "express": "^5.0.0",
         "jquery": "^3.7.1",
+        "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.11.5"
     },
     "devDependencies": {
         "@eslint/js": "^9.16.0",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.8",
+        "@types/cookie-session": "^2.0.49",
         "@types/express": "^4.0.0",
         "@types/jquery": "^3.5.32",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^22.10.1",
         "autoprefixer": "^10.4.20",
         "chart.js": "^4.4.7",
