--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.16.0",
+        "@hcaptcha/types": "^1.0.4",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/bcrypt": "^5.0.2",
+        "@types/chart.js": "^2.9.41",
         "@types/cookie-parser": "^1.4.8",
         "@types/cookie-session": "^2.0.49",
         "@types/express": "^4.0.0",
