--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.7",
         "cookie-session": "^2.1.0",
+        "date-fns": "^4.1.0",
         "dotenv": "^16.4.7",
         "ejs": "^3.1.10",
         "express": "^5.0.0",
