--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "trade-ticker",
     "version": "1.0.0",
     "repository": "https://github.com/04Samir/TradeTicker.git",
-    "author": "me@samir.cx",
+    "author": "contact@samir.cx",
     "license": "MIT",
     "private": true,
     "packageManager": "yarn@1.22.22",
